# multimedia_media_standard

./: .gitattributes  BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  hisysevent.yaml  ohos.build
frameworks/innerkitsimpl/common/: BUILD.gn
frameworks/innerkitsimpl/common/src/: format.cpp  source.cpp
frameworks/innerkitsimpl/player/: BUILD.gn
frameworks/innerkitsimpl/player/include/: audio_renderer_sink.h  volume_control.h
frameworks/innerkitsimpl/player/src/: audio_renderer_sink.cpp  player.cpp  volume_control.cpp
frameworks/innerkitsimpl/recorder/: BUILD.gn
frameworks/innerkitsimpl/recorder/include/: recorder_audio_source.h  recorder_data_source.h  recorder_impl.h  recorder_sink.h  recorder_source.h  recorder_video_source.h
frameworks/innerkitsimpl/recorder/src/: recorder.cpp  recorder_audio_source.cpp  recorder_data_source.cpp  recorder_impl.cpp  recorder_sink.cpp  recorder_video_source.cpp
frameworks/videodisplaymanager/: BUILD.gn
frameworks/videodisplaymanager/include/: videodisplaymanager.h
frameworks/videodisplaymanager/src/: videodisplaymanager.cpp
interfaces/inner_api/native/: BUILD.gn  av_common.h  avcodec_audio_decoder.h  avcodec_audio_encoder.h  avcodec_common.h  avcodec_info.h  avcodec_video_decoder.h  avcodec_video_encoder.h  avcontainer_common.h  avcontainer_types.h  avmemory.h  avmetadatahelper.h  avmuxer.h  avsharedmemory.h  avspliter.h  format.h  media_description.h  media_errors.h  player.h  recorder.h  recorder_profiles.h
interfaces/innerkits/native/media/: BUILD.gn
interfaces/kits/c/: BUILD.gn  libnative_media.capi.json  native_avcodec_audiodecoder.h  native_avcodec_audioencoder.h  native_avcodec_base.h  native_avcodec_videodecoder.h  native_avcodec_videoencoder.h  native_averrors.h  native_avformat.h  native_avmemory.h
interfaces/kits/c/audio_decoder/: BUILD.gn  libnative_media_adec.ndk.json
interfaces/kits/c/audio_encoder/: BUILD.gn  libnative_media_aenc.ndk.json
interfaces/kits/c/codec_base/: BUILD.gn  libnative_media_codecbase.ndk.json
interfaces/kits/c/core/: BUILD.gn  libnative_media_core.ndk.json
interfaces/kits/c/video_decoder/: BUILD.gn  libnative_media_vdec.ndk.json
interfaces/kits/c/video_encoder/: BUILD.gn  libnative_media_venc.ndk.json
interfaces/kits/js/: @ohos.multimedia.media.d.ts  BUILD.gn  audio_decoder_napi.h  audio_encoder_napi.h  audio_player_napi.h  audio_recorder_napi.h  avmuxer_napi.h  media_capability_napi.h  media_data_source_napi.h  native_module_ohos_media.h  video_decoder_napi.h  video_encoder_napi.h  video_player_napi.h  video_recorder_napi.h
interfaces/kits/js/media/: @ohos.multimedia.media.d.ts  BUILD.gn
services/: BUILD.gn
services/dfx/: BUILD.gn  dfx_log_dump.cpp  dfx_log_dump.h  media_dfx_config.h
services/engine/: BUILD.gn
services/engine/common/: BUILD.gn
services/engine/common/avcodeclist/: BUILD.gn  avcodec_ability_singleton.cpp  avcodec_ability_singleton.h  avcodec_xml_parser.cpp  avcodec_xml_parser.h  avcodeclist_engine_gst_impl.cpp  avcodeclist_engine_gst_impl.h
services/engine/common/recorder_profiles/: recorder_profiles_ability_singleton.cpp  recorder_profiles_xml_parser.cpp  (+2 more)
services/engine/gstreamer/: BUILD.gn
services/engine/include/: i_avmetadatahelper_engine.h  i_engine_factory.h  i_player_engine.h  i_recorder_engine.h  recorder_param.h
services/etc/: BUILD.gn  codec_caps.xml  media_service.cfg  media_service.rc
services/include/: i_avcodec_service.h  i_avcodeclist_service.h  i_avmetadatahelper_service.h  i_avmuxer_service.h  i_media_service.h  i_player_service.h  i_recorder_profiles_service.h  i_recorder_service.h
services/player/engine/: BUILD.gn  i_player_engine.cpp
services/plugins/: BUILD.gn
services/recorder/engine/: BUILD.gn  i_recorder_engine.cpp
services/services/: BUILD.gn
services/services/common/: avsharedmemory_ipc.cpp  avsharedmemory_ipc.h
services/services/engine_intf/: i_avcodec_engine.h  i_avcodeclist_engine.h  i_avmetadatahelper_engine.h  i_avmuxer_engine.h  i_engine_factory.h  i_player_engine.h  i_recorder_engine.h  recorder_param.h
services/services/factory/: engine_factory_repo.cpp  engine_factory_repo.h
services/utils/: BUILD.gn  avsharedmemorybase.cpp  avsharedmemorylocal.cpp  avsharedmemorypool.cpp  format.cpp  media_dfx.cpp  task_queue.cpp  time_monitor.cpp  time_perf.cpp  uri_helper.cpp  xml_parse.cpp
services/utils/histream_manager/: histream_manager.cpp  histream_manager.h
services/utils/include/: avsharedmemorybase.h  avsharedmemorylocal.h  avsharedmemorypool.h  media_dfx.h  media_log.h  scope_guard.h  task_queue.h  time_monitor.h  time_perf.h  uri_helper.h  xml_parse.h
test/fuzztest/avmetadatafetchframeattime_fuzzer/: BUILD.gn  avmetadatafetchframeattime_fuzzer.cpp  avmetadatafetchframeattime_fuzzer.h
test/fuzztest/playerfile_fuzzer/: BUILD.gn  playerfile_fuzzer.cpp  playerfile_fuzzer.h  project.xml
test/fuzztest/test_player_setvolume_fuzzer/: BUILD.gn  test_Player_SetVolume_fuzzer.cpp  test_Player_SetVolume_fuzzer.h  test_player_setvolume_fuzzer.cpp  test_player_setvolume_fuzzer.h
test/jsdemo/: BUILD.gn  napi_demo.cpp  napi_demo.h  native_module_ohos_napidemo.cpp  native_module_ohos_napidemo.h
test/nativedemo/: BUILD.gn  media_demo.cpp
test/nativedemo/avcodeclist/: avcodeclist_demo.cpp  avcodeclist_demo.h
test/nativedemo/avcodecvdec/: avcodec_vdec_demo.cpp  avcodec_vdec_demo.h
test/nativedemo/avcodecvenc/: avcodec_venc_demo.cpp  avcodec_venc_demo.h
test/nativedemo/avmetadatahelper/: avmetadatahelper_demo.cpp
test/nativedemo/avmuxer/: avmuxer_demo.cpp  avmuxer_demo.h
test/nativedemo/include/: demo_log.h
test/nativedemo/player/: player_demo.cpp  player_demo.h
test/nativedemo/recorder/: recorder_demo.cpp  recorder_demo.h
test/nativedemo/recorder_profiles/: recorder_profiles_demo.cpp  recorder_profiles_demo.h
test/unittest/avcodec_test/: BUILD.gn  avcodec_mock.h  enum_mock.h  videodec_unit_test.h
test/unittest/avmetadata_test/: BUILD.gn
test/unittest/engine_test/: BUILD.gn
test/unittest/player_test/: BUILD.gn
test/unittest/service_test/: BUILD.gn
(+947 files in other folders)
