# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("videodisplaymanager_public_config") {
  include_dirs = [
    "//foundation/multimedia/media_standard/frameworks/videodisplaymanager/include",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/display/interfaces/hdi_cpp/client",
    "//drivers/adapter/uhdf2/hdi",
    "//drivers/adapter/uhdf2/include/hdi"
  ]
}

ohos_shared_library("videodisplaymanager") {
  sources = [ "src/videodisplaymanager.cpp" ]

  include_dirs = [ "//foundation/graphic/standard/frameworks/surface/include" ]

  public_configs = [
    ":videodisplaymanager_public_config",
    "//utils/native/base:utils_config",
  ]

  deps = [ "//drivers/peripheral/display/hal:hdi_display_layer" ]

  public_deps = [
    "//foundation/graphic/standard/frameworks/surface:surface",
    "//drivers/peripheral/display/interfaces/hdi_cpp/client:display_client"
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  cflags = [ "-DVIDEO_DISPLAY_DEBUG" ]

  part_name = "multimedia_media_standard"
  subsystem_name = "multimedia"
}
