# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("videodisplaymanager_public_config") {
  include_dirs = [ "//foundation/multimedia/player_framework/frameworks/videodisplaymanager/include" ]
}

ohos_shared_library("videodisplaymanager") {
  sources = [ "src/videodisplaymanager.cpp" ]

  include_dirs =
      [ "//foundation/graphic/graphic_2d/frameworks/surface/include" ]

  public_configs = [
    ":videodisplaymanager_public_config",
    "//commonlibrary/c_utils/base:utils_config",
  ]

  public_deps = [
    "//drivers/peripheral/display/hdi_service/video_layer/client:video_layer_client",
    "//foundation/graphic/graphic_2d/frameworks/surface:surface",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  cflags = [ "-DVIDEO_DISPLAY_DEBUG" ]

  part_name = "multimedia_player_framework"
  subsystem_name = "multimedia"
}
