# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("media_service_config") {
  visibility = [ ":*" ]

  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
  ]

  include_dirs = [
    "sa_media/ipc",
    "sa_media/server",
    "player/ipc",
    "player/server",
    "recorder/ipc",
    "recorder/server",
    "//foundation/multimedia/media_standard/services/include",
    "//foundation/multimedia/media_standard/services/services/factory",
    "//foundation/multimedia/media_standard/services/engine/include",
    "//foundation/multimedia/media_standard/services/utils/include",
    "//foundation/multimedia/media_standard/interfaces/innerkits/native/media/include",
    "//utils/native/base/include",
  ]

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("media_service") {
  install_enable = true

  sources = [
    "sa_media/ipc/media_service_stub.cpp",
    "sa_media/server/media_server.cpp",
    "sa_media/server/media_server_manager.cpp",
    "recorder/ipc/recorder_service_stub.cpp",
    "recorder/ipc/recorder_listener_proxy.cpp",
    "recorder/server/recorder_server.cpp",
    "player/ipc/player_service_stub.cpp",
    "player/ipc/player_listener_proxy.cpp",
    "player/server/player_server.cpp",
    "factory/engine_factory_repo.cpp",
    "common/avsharedmemory_ipc.cpp"
  ]

  configs = [
    ":media_service_config",
    "//foundation/graphic/standard/frameworks/surface:surface_public_config"
  ]

  deps = [
     "//utils/native/base:utils",
     "//foundation/graphic/standard/frameworks/surface:surface",
     "//foundation/multimedia/media_standard/services/utils:media_service_utils",
  ]

  external_deps = [
    "ipc:ipc_core",
    "samgr_L2:samgr_proxy",
    "safwk:system_ability_fwk",
    "hiviewdfx_hilog_native:libhilog",
    "bytrace_standard:bytrace_core",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_media_standard"
}
