# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("media_service_config") {
  visibility = [ ":*" ]

  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
  ]

  include_dirs = [
    "sa_media/ipc",
    "sa_media/server",
    "common",
    "player/ipc",
    "player/server",
    "media_data_source/ipc",
    "media_data_source/server",
    "recorder/ipc",
    "recorder/server",
    "avmetadatahelper/ipc",
    "avmetadatahelper/server",
    "avcodec/ipc",
    "avcodec/server",
    "avcodeclist/ipc",
    "avcodeclist/server",
    "avmuxer/ipc",
    "avmuxer/server",
    "//base/security/access_token/interfaces/innerkits/access_token/include",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara/include",
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
    "//foundation/multimedia/media_standard/services/include",
    "//foundation/multimedia/media_standard/services/services/factory",
    "//foundation/multimedia/media_standard/services/services/engine_intf",
    "//foundation/multimedia/media_standard/services/utils/include",
    "//foundation/multimedia/media_standard/interfaces/inner_api/native",
    "//foundation/multimedia/media_standard/services/services/common",
    "//utils/native/base/include",
    "//foundation/multimedia/image_standard/interfaces/innerkits/include",
    "//foundation/multimedia/media_standard/services/engine/common/avcodeclist",
  ]

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("media_service") {
  install_enable = true

  sources = [
    "//foundation/multimedia/media_standard/frameworks/native/common/media_errors.cpp",
    "//foundation/multimedia/media_standard/services/utils/avsharedmemorybase.cpp",
    "avcodec/ipc/avcodec_listener_proxy.cpp",
    "avcodec/ipc/avcodec_service_stub.cpp",
    "avcodec/server/avcodec_server.cpp",
    "avcodeclist/ipc/avcodeclist_service_stub.cpp",
    "avcodeclist/server/avcodeclist_server.cpp",
    "avmetadatahelper/ipc/avmetadatahelper_service_stub.cpp",
    "avmetadatahelper/server/avmetadatahelper_server.cpp",
    "avmuxer/ipc/avmuxer_service_stub.cpp",
    "avmuxer/server/avmuxer_server.cpp",
    "common/avsharedmemory_ipc.cpp",
    "factory/engine_factory_repo.cpp",
    "media_data_source/ipc/media_data_source_proxy.cpp",
    "player/ipc/player_listener_proxy.cpp",
    "player/ipc/player_service_stub.cpp",
    "player/server/player_server.cpp",
    "recorder/ipc/recorder_listener_proxy.cpp",
    "recorder/ipc/recorder_service_stub.cpp",
    "recorder/server/recorder_server.cpp",
    "sa_media/ipc/avcodeclist_parcel.cpp",
    "sa_media/ipc/media_listener_proxy.cpp",
    "sa_media/ipc/media_parcel.cpp",
    "sa_media/ipc/media_service_stub.cpp",
    "sa_media/server/media_server.cpp",
    "sa_media/server/media_server_manager.cpp",
  ]

  configs = [
    ":media_service_config",
    "//foundation/graphic/standard/frameworks/surface:surface_public_config",
  ]

  deps = [
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//foundation/graphic/standard/frameworks/surface:surface",
    "//foundation/multimedia/media_standard/services/utils:media_format",
    "//foundation/multimedia/media_standard/services/utils:media_service_utils",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "bytrace_standard:bytrace_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_media_standard"
}
