# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("media_service_utils_public_config") {
  include_dirs = [
    "include",
  ]
}

ohos_shared_library("media_service_utils") {
  install_enable = true

  sources = [
    "task_queue.cpp",
    "time_monitor.cpp",
  ]

  if (defined(ohos_lite)) {
    sources += [
      "avsharedmemorylocal.cpp",
    ]
  } else {
    sources += [
      "avsharedmemorybase.cpp",
    ]
  }

  include_dirs = [
    "//utils/native/base/include",
    "//foundation/multimedia/media_standard/interfaces/innerkits/native/media/include",
  ]

  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
  ]

  configs = [
    ":media_service_utils_public_config",
  ]

  deps = [
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_media_standard"
}