# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_static_library("media_format") {
  sources = [
    "format.cpp",
    "xml_parse.cpp",
  ]

  include_dirs = [
    "//foundation/multimedia/player_framework/interfaces/inner_api/native",
    "//foundation/multimedia/player_framework/services/utils/include",
    "//utils/native/base/include",
    "//third_party/libxml2/include",
  ]

  configs = [ "//foundation/multimedia/player_framework/services/dfx:media_service_dfx_public_config" ]

  deps = [
    "//foundation/multimedia/player_framework/services/dfx:media_service_dfx",
    "//foundation/multimedia/player_framework/services/utils:media_service_utils",
    "//third_party/libxml2:xml2",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  subsystem_name = "multimedia"
  part_name = "multimedia_player_framework"
}

config("media_service_utils_public_config") {
  include_dirs = [
    "include",
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
  ]
}

ohos_shared_library("media_service_utils") {
  install_enable = true

  sources = [
    "avsharedmemorybase.cpp",
    "avsharedmemorypool.cpp",
    "media_dfx.cpp",
    "task_queue.cpp",
    "time_monitor.cpp",
    "time_perf.cpp",
    "uri_helper.cpp",
    "xml_parse.cpp",
  ]

  include_dirs = [
    "//utils/native/base/include",
    "//foundation/multimedia/player_framework/interfaces/inner_api/native",
    "//third_party/libxml2/include",
  ]

  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
    "-Werror",
    "-Wextra",
    "-Wimplicit-fallthrough",
    "-Wsign-compare",
    "-Wunused-parameter",
  ]

  configs = [
    ":media_service_utils_public_config",
    "//foundation/multimedia/player_framework/services/dfx:media_service_dfx_public_config",
  ]

  deps = [
    "//foundation/multimedia/player_framework/services/dfx:media_service_dfx",
    "//third_party/libxml2:xml2",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_player_framework"
}
