# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("media_common_packages") {
  deps = [
    ":media_common",
    ":sourceFormatTest",
  ]
}

ohos_shared_library("media_common") {
  install_enable = true
  sources = [
    "src/format.cpp",
    "src/source.cpp",
  ]
  cflags = [ "-fPIC" ]
  cflags += [ "-Wall" ]
  cflags_cc = cflags
  include_dirs = [
    "//foundation/multimedia/media_standard/interfaces/innerkits/native/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//third_party/bounds_checking_function/include",
  ]
  public_configs = [ ":common_external_library_config" ]
  public_deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//third_party/bounds_checking_function:libsec_static",
  ]
  part_name = "multimedia_media_standard"
  subsystem_name = "multimedia"
}

ohos_executable("sourceFormatTest") {
  install_enable = false
  sources = [ "//foundation/multimedia/media_standard/interfaces/innerkits/native/test/sourceFormatTest.cpp" ]
  include_dirs = [ "//foundation/multimedia/media_standard/interfaces/innerkits/native/include" ]
  deps = [ ":media_common" ]
  part_name = "multimedia_media_standard"
  subsystem_name = "multimedia"
}

config("common_external_library_config") {
  include_dirs = [ "//foundation/multimedia/media_standard/interfaces/innerkits/native/include" ]
}
