# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

SDK_LIB_DIR = rebase_path("//device/hisilicon/hispark_taurus/sdk_linux/soc/lib",
                          root_build_dir)
AUDIO_LIB_DIR = rebase_path(
        "//device/hisilicon/hardware/media/hal/audio/hi3516dv300/llvm/ext/libs",
        root_build_dir)
COMMON_LIB_DIR = rebase_path(
        "//device/hisilicon/hardware/media/hal/common/hi3516dv300/llvm/ohos/libs",
        root_build_dir)

group("hst_interfaces_packages") {
  deps = [
    ":hstmedia",
    ":hstmediatest",
  ]
}

config("hstmedia_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "./",
    "./include",
    "//foundation/multimedia/media_standard/interfaces/innerkits/native/include",
    "//third_party/gstreamer/gstreamer",
    "//third_party/gstreamer/gstreamer/libs",
    "//third_party/gstreamer/gstplugins_base",
    "//third_party/gstreamer/gstplugins_base/gst-libs",
    "//third_party/gstreamer/gstplugins_bad/gst-libs",
    "//third_party/glib/glib",
    "//third_party/glib",
    "//third_party/glib/gmodule",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/multimedia/media_lite/hals/camera_lite",
    "//drivers/hdf/interfaces/display/include",
    "//drivers/peripheral/audio/interfaces/include",
    "//drivers/peripheral/display/interfaces/include",
    "//foundation/graphic/standard/utils/include",
    "//utils/native/base/include",
    "//third_party/bounds_checking_function/include",
    "//foundation/graphic/standard/window_manager/include",
    "//device/hisilicon/hispark_taurus/sdk_linux/soc/src/mpp/cbb/include",
    "//device/hisilicon/hispark_taurus/sdk_linux/soc/src/osal/include",
    "//device/hisilicon/hispark_taurus/sdk_linux/soc/src/mpp/cbb/init/include/linux",
    "//device/hisilicon/hispark_taurus/sdk_linux/soc/src/mpp/cbb/based/arch/hi3516cv500/include/hi3516cv500",
  ]

  cflags = [
    "-Wall",
    "-Werror",
  ]
}

ohos_source_set("hstmedia_source") {
  sources = [
    "src/audio_renderer_sink.cpp",
    "src/player.cpp",
    "src/volume_control.cpp",
  ]

  external_deps = [
    "ipc:ipc_core",
    "multimedia_audio_standard:audio_client",
  ]

  configs = [ ":hstmedia_config" ]

  deps = [ "//foundation/graphic/standard:libsurface" ]
}

ohos_shared_library("hstmedia") {
  install_enable = true

  deps = [
    ":hstmedia_source",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//device/hisilicon/hardware:hardware_group",
    "//foundation/graphic/standard:libsurface",
    "//third_party/glib:glib",
    "//third_party/glib:gmodule",
    "//third_party/glib:gobject",
    "//third_party/gstreamer/gstplugins_bad:gstplayer",
    "//third_party/gstreamer/gstplugins_base:gstapp",
    "//third_party/gstreamer/gstplugins_base:gstaudio",
    "//third_party/gstreamer/gstplugins_base:gstvideo",
    "//third_party/gstreamer/gstreamer:gstbase",
    "//third_party/gstreamer/gstreamer:gstreamer",
    "//utils/native/base:utils",
  ]

  ldflags = [
    "-L${SDK_LIB_DIR}",
    "-L${AUDIO_LIB_DIR}",
    "-L${COMMON_LIB_DIR}",
    "-lsdk",
    "-laudio_hw",
    "-lhi3516cv500_base",
    "-lhi3516cv500_chnl",
    "-lhi3516cv500_dis",
    "-lhi3516cv500_gdc",
    "-lhi3516cv500_h264e",
    "-lhi3516cv500_h265e",
    "-lhi3516cv500_isp",
    "-lhi3516cv500_ive",
    "-lhi3516cv500_jpegd",
    "-lhi3516cv500_jpege",
    "-lhi3516cv500_rc",
    "-lhi3516cv500_rgn",
    "-lhi3516cv500_sys",
    "-lhi3516cv500_vdec",
    "-lhi3516cv500_vedu",
    "-lhi3516cv500_venc",
    "-lhi3516cv500_vfmw",
    "-lhi3516cv500_vgs",
    "-lhi3516cv500_vi",
    "-lhi3516cv500_vo",
    "-lhi3516cv500_vpss",
    "-lhi3516cv500_aio",
    "-lhi3516cv500_ai",
    "-lhi3516cv500_ao",
    "-lhi3516cv500_adec",
    "-lhi3516cv500_acodec",
    "-lhi3516cv500_aenc",
    "-lhi3516cv500_nnie",
    "-lhi_osal",
    "-lhi_irq",
    "-lhi_sensor_i2c",
    "-lmpi",
    "-lupvqe",
    "-ldnvqe",
    "-lVoiceEngine",
  ]
  part_name = "multimedia_media_standard"
  subsystem_name = "multimedia"
}

ohos_source_set("hstmediatest_source") {
  sources = [ "//foundation/multimedia/media_standard/interfaces/innerkits/native/test/playerTest.cpp" ]

  external_deps = [ "ipc:ipc_core" ]

  configs = [ ":hstmedia_config" ]

  deps = [
    "//foundation/graphic/standard:libsurface",
    "//foundation/graphic/standard:libwms_client",
  ]
}

ohos_executable("hstmediatest") {
  install_enable = false
  deps = [
    ":hstmedia",
    ":hstmediatest_source",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/graphic/standard:libsurface",
    "//foundation/graphic/standard:libwms_client",
    "//third_party/glib:glib",
    "//utils/native/base:utils",
  ]
  part_name = "multimedia_media_standard"
  subsystem_name = "multimedia"
}
